fix text alignment of dropdowns

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,7 +151,7 @@ font-style:italic;
   text-align: center;
 }
 
-a{
+.link{
   color:#0069c0;
-  text-align:center;
+  text-align:center !important;
 }
